# APACHE-SPARK-COM-DELTA-LAKE-E-APACHE-ICEBERG

./: 404.html  README.md  index.html  pyproject.toml  search.html
delta/: index.html  pyproject.toml  spark-delta-lake.ipynb
delta/spark-warehouse/carro_delta/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  (+3 more)
delta/spark-warehouse/policies/: .part-00000-96148e54-c427-4008-b1db-acddfe51afd8-c000.snappy.parquet.crc  .part-00000-a5d09e4b-9caf-448e-94e4-d219bf5c165e-c000.snappy.parquet.crc  .part-00000-caa5121f-70bf-4aa5-94d5-495204fb277a-c000.snappy.parquet.crc  .part-00000-dfd57e1b-efd7-441d-b9e6-3e559757411c-c000.snappy.parquet.crc  .part-00000-e13ff485-c6c4-4577-ad50-48ba6298b633-c000.snappy.parquet.crc  .part-00001-94bfefd1-8966-477a-a529-35f5e9e565e4-c000.snappy.parquet.crc  .part-00001-ceb2c050-61bb-4d23-a261-f9e1984cbe5b-c000.snappy.parquet.crc  part-00000-184552ea-96c4-4de5-bf77-32f57cda6845-c000.snappy.parquet  part-00000-96148e54-c427-4008-b1db-acddfe51afd8-c000.snappy.parquet  part-00000-caa5121f-70bf-4aa5-94d5-495204fb277a-c000.snappy.parquet  part-00000-dfd57e1b-efd7-441d-b9e6-3e559757411c-c000.snappy.parquet  part-00000-e13ff485-c6c4-4577-ad50-48ba6298b633-c000.snappy.parquet  part-00001-94bfefd1-8966-477a-a529-35f5e9e565e4-c000.snappy.parquet  part-00001-ceb2c050-61bb-4d23-a261-f9e1984cbe5b-c000.snappy.parquet
iceberg/: index.html  pyproject.toml  spark-iceberg.ipynb
mkdocs/: mkdocs.yml
mkdocs/docs/: delta.md  iceberg.md  index.md  spark.md
search/: search_index.json
spark/: index.html
(+92 files in other folders)
